--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
+    "noImplicitAny": false,
     "types": ["@nuxt/types", "@types/node"]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
